public/styles/application.css
/* global */

body { margin: 20px 50px; }
a, a:hover { 
    color: #222222;
    text-decoration: underline dotted;
    cursor: pointer;
}

/* menu */
fieldset {
    overflow: hidden;
    float: left;
}    
label {
    float: left;
    clear: none;
    display: block;
    padding: 6px 10px 8px 10px;
    font-size: 18px;
    font-weight: normal;
    cursor: pointer;
}

input[type=checkbox] { 
    vertical-align: middle; 
    position: relative; 
    bottom: -12px; 
    cursor: pointer;
} 

select, option {
    cursor: pointer;
}

strong {
    font-size: 18px;
}

/* table stuff */
table {
    border-collapse:collapse;
}
th, td { 
    white-space: nowrap;
    text-align:center;
}

th.colHeadsOne {
    border-left: 1px dotted #E1E1E1;
    border-right: 1px dotted #E1E1E1;
}

th.colHeadsOne {
    border-left: 1px dotted #E1E1E1;
    border-right: 1px solid #E1E1E1;
}

th.colHeadsCases {
    border-left: 1px dotted #E1E1E1;
}

th.colHeadsDeaths {
    border-right: 1px dotted #E1E1E1;
}

td.colCellCases {
    border-left: 1px dotted #E1E1E1;
}

td.colCellDeaths {
    border-right: 1px dotted #E1E1E1;
}

td.colCellPopulation {
    border-right: 1px dotted #E1E1E1;
    border-left: 1px dotted #E1E1E1;
}

td.colCellGovernmentBranch {
    border-right: 1px solid #E1E1E1;
}

th.stateName {
    text-align:left;
    background-color: white;
    border-right: 1px dotted #E1E1E1;
    padding-left: 5px;
    border-bottom: 1px solid rgba(34,36,38,.1);
}

div.populationLabel, div.populationLabel a {
    font-style: normal;
    font-weight: normal;
    font-size: 0.85em;
}

.showCell { display: table-cell; }
.hideCell { display: none; }

.rowRepublicanControl { background-color: #ff8080;}
.rowDemocratControl { background-color: #80b3ff;}
.rowSplitControl { background-color: #bfbfbf;}
.rowUnknownControl { background-color: none;}

